--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#"><img src="../web/img/websitelogo.JPG" class="logo" alt=""></a>
+                    <a href="#"><img src="../img/websitelogo.JPG" class="logo" alt=""></a>
                     
                 </div>
                 <div class="collapse navbar-collapse" id="micon">
@@ -52,16 +52,16 @@
                 <input type="radio" name="radio-btn" id="radio4">
                 <!-- <input type="radio" name="radio-btn" id="radio5"> -->
                 <div class="slide first">
-                    <img src="../web/img/5tops_1.JPG" alt="">
+                    <img src="../img/5tops_1.JPG" alt="">
                 </div>
                 <div class="slide">
-                    <img src="../web/img/pwb_1.JPG" alt="">
+                    <img src="../img/pwb_1.JPG" alt="">
                 </div>
                 <div class="slide">
-                    <img src="../web/img/owlps_so3_2.JPG" alt="">
+                    <img src="../img/owlps_so3_2.JPG" alt="">
                 </div>
                 <div class="slide">
-                    <img src="../web/img/bablaset_1.jpeg" alt="">
+                    <img src="../img/bablaset_1.jpeg" alt="">
                 </div>
             </div>
             <div class="navigation-manual">
@@ -96,8 +96,8 @@
     <div class="afterimg" id="aboutus">
         <li class="title">About Us</li>
         <div class="aboutus">
-            <img src="../web/img/russiandollpremium.jpeg" alt="" class="leftcircle">
-            <img src="../web/img/kitleyset.jpeg" alt="" class="rightcircle">
+            <img src="../img/russiandollpremium.jpeg" alt="" class="leftcircle">
+            <img src="../img/kitleyset.jpeg" alt="" class="rightcircle">
             <li class="slogan">"Cherishing the craft of India, we are known for our gifting ideas and festive, office and home decor." </li>
             <li>We are a company that works for preservation and enhancement of the traditional art of making wooden toys. We aim to promote the artisans and craftsmen involved in making lacquer ware.</li>
         </div>
@@ -110,13 +110,13 @@
     <div class="productsstart">
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../web/img/9.2.JPG" alt="" >
+                <img src="../img/9.2.JPG" alt="" >
             </div>
             <div class="centerimg">
-                <img src="../web/img/10.JPG" alt="" >
+                <img src="../img/10.JPG" alt="" >
             </div>
             <div class="rightimg">
-                <img src="../web/img/11.JPG" alt="" >
+                <img src="../img/11.JPG" alt="" >
             </div>
         </div>
         <div class="descriptionprod">
@@ -133,13 +133,13 @@
         <!-- secondrow -->
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../web/img/giantwheel.JPG" alt="" >
+                <img src="../img/giantwheel.JPG" alt="" >
             </div>
             <div class="centerimg">
-                <img src="../web/img/kumkumdibbi.JPG" alt="" >
+                <img src="../img/kumkumdibbi.JPG" alt="" >
             </div>
             <div class="rightimg">
-                <img src="../web/img/indiapenstand.JPG" alt="" >
+                <img src="../img/indiapenstand.JPG" alt="" >
             </div>
         </div>
         <div class="descriptionprod">
@@ -156,13 +156,13 @@
         <!-- third row    -->
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../web/img/1.JPG" alt="" >
+                <img src="../img/1.JPG" alt="" >
             </div>
             <div class="centerimg">
-                <img src="../web/img/13.JPG" alt="" >
+                <img src="../img/13.JPG" alt="" >
             </div>
             <div class="rightimg">
-                <img src="../web/img/21.2.JPG" alt="" >
+                <img src="../img/21.2.JPG" alt="" >
             </div>
         </div>
         <div class="descriptionprod">
@@ -179,13 +179,13 @@
         <!-- fourth row -->
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../web/img/wind_top_1.jpg" alt="" >
+                <img src="../img/wind_top_1.jpg" alt="" >
             </div>
             <div class="centerimg">
-                <img src="../web/img/pencil_2sharp_3.JPG" alt="" >
+                <img src="../img/pencil_2sharp_3.JPG" alt="" >
             </div>
             <div class="rightimg">
-                <img src="../web/img/pushnpullsnail.JPG" alt="" >
+                <img src="../img/pushnpullsnail.JPG" alt="" >
             </div>
         </div>
         <div class="descriptionprod">
@@ -206,7 +206,7 @@
         <li class="title">Accomplishments</li>
     </div>
     <div class="accomplishmentsstart">
-        <li class="trademarkimg"><img src="../web/img/gogalgaitoysbothtrademarks.jpg" alt=""></li>
+        <li class="trademarkimg"><img src="../img/gogalgaitoysbothtrademarks.jpg" alt=""></li>
         <div class="accomplishmentstext">
             <li>We have 2 trademarks registered as Gogalgai and Gogalgai Toys, issued by the Government of India, giving us the leverage to enter the market with a variety of unique, hand-made wooden products.</li>
             <li>Having filed the International Product Patents for innovative products developed indigenously, we have also been awarded the membership of Export Promotion Council for Handicrafts (EPCH) as well as the membership of Sports Goods Export Promotion Council (SGEPC).</li>
@@ -220,9 +220,9 @@
     </div>
     <div class="findusstart">
         <div class="findusimg">
-            <li class="findusimgqr"><a href="https://linktr.ee/gogalgaitoys"><img src="../web/img/linktree_qr.png"alt=""></a></li>
+            <li class="findusimgqr"><a href="https://linktr.ee/gogalgaitoys"><img src="../img/linktree_qr.png"alt=""></a></li>
             <li class="findustext">Scan the QR on the left or simply click on it to find all the possible ways to reach us! With this, you can find a link to all our social media handles and even place orders via whatsapp or Indiamart. Visit Our Shop by following the directions given here- https://bit.ly/3auzjBt or scan or click on the QR code on the right!</li>
-            <li class="findusimgmap"><a href="https://www.google.com/maps/place/GOGALGAI+TOYS/@19.1901242,72.9578576,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x21975944f56d9ca1!8m2!3d19.1993777!4d72.9779135?hl=en&authuser=3"><img src="../web/img/bit.ly_3auzjBt.png"alt=""></a></li>
+            <li class="findusimgmap"><a href="https://www.google.com/maps/place/GOGALGAI+TOYS/@19.1901242,72.9578576,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x21975944f56d9ca1!8m2!3d19.1993777!4d72.9779135?hl=en&authuser=3"><img src="../img/bit.ly_3auzjBt.png"alt=""></a></li>
         </div>
     </div> 
     <!-- findus ends -->
