--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
     <div class="findusstart">
         <div class="findusimg">
             <li class="findusimgqr"><a href="https://linktr.ee/gogalgaitoys"><img src="../img/linktree_qr.png"alt=""></a></li>
-            <li class="findustext">Scan the QR on the left or simply click on it to find all the possible ways to reach us! With this, you can find a link to all our social media handles and even place orders via whatsapp or Indiamart. Visit Our Shop by following the directions given here- https://bit.ly/3auzjBt or scan or click on the QR code on the right!</li>
-            <li class="findusimgmap"><a href="https://www.google.com/maps/place/GOGALGAI+TOYS/@19.1901242,72.9578576,17z/data=!3m1!4b1!4m5!3m4!1s0x0:0x21975944f56d9ca1!8m2!3d19.1993777!4d72.9779135?hl=en&authuser=3"><img src="../img/bit.ly_3auzjBt.png"alt=""></a></li>
+            <li class="findustext">Scan the QR on the left or simply click on it to find all the possible ways to reach us! With this, you can find a link to all our social media handles and even place orders via whatsapp or Indiamart. Having trouble finding our product catalogue? Scan or click on the QR code on the right!</li>
+            <li class="findusimgmap"><a href="https://drive.google.com/drive/folders/17wTlPHHo_207uh_jTX09Nb2uFYJ78RrM?usp=sharing"><img src="../img/bit.ly_3auzjBt.png"alt=""></a></li>
         </div>
     </div> 
     <!-- findus ends -->
