--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="findusimg">
             <li class="findusimgqr"><a href="https://linktr.ee/gogalgaitoys"><img src="../img/linktree_qr.png"alt=""></a></li>
             <li class="findustext">Scan the QR on the left or simply click on it to find all the possible ways to reach us! With this, you can find a link to all our social media handles and even place orders via whatsapp or Indiamart. Having trouble finding our product catalogue? Scan or click on the QR code on the right!</li>
-            <li class="findusimgmap"><a href="https://drive.google.com/drive/folders/17wTlPHHo_207uh_jTX09Nb2uFYJ78RrM?usp=sharing"><img src="../img/bit.ly_3auzjBt.png"alt=""></a></li>
+            <li class="findusimgmap"><a href="https://drive.google.com/drive/folders/17wTlPHHo_207uh_jTX09Nb2uFYJ78RrM?usp=sharing"><img src="../img/product_catalogueqr.png"alt=""></a></li>
         </div>
     </div> 
     <!-- findus ends -->
