--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <li><a href="tel:+919152110122" class="fa fa-phone"></a></li>
             <li><a href="https://wa.me/message/I3434GIRUEDPC1" class="fa fa-whatsapp"></a></li>
             <li><a href="https://www.facebook.com/Gogalgai-Toys-105418405184394" class="fa fa-facebook"></a></li>
-            <li><a href="mailto: gogalgaitoys21@gmail.com" class="fa fa-envelope"></a></li>
+            <li><a href="mailto: contactus@gogalgaitoys.in" class="fa fa-envelope"></a></li>
             <li><a href="http://www.instagram.com/gogalgaitoys/" class="fa fa-instagram"></a></li>
             <li><a href="https://www.linkedin.com/company/gogalgai-toys-llp/mycompany/" class="fa fa-linkedin"></a></li>
         </nav>       
@@ -228,7 +228,7 @@
     <!-- findus ends -->
     <!-- contactusstart -->
     <div class="contactinfo">
-        <li class="title">Give us a call on +91 9152110122 or mail us at gogalgaitoys21@gmail.com. For any queries, click on the Contact us button on the top right side!</li>
+        <li class="title">Give us a call on +91 9152110122 or mail us at <a href="mailto: contactus@gogalgaitoys.in">contactus@gogalgaitoys.in</a>. For any queries, click on the Contact us button on the top right side!</li>
     </div>
 </body>
 </html>
