--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     <!-- findus ends -->
     <!-- contactusstart -->
     <div class="contactinfo">
-        <li class="title">Give us a call on +91 9152110122 or mail us at <a href="mailto: contactus@gogalgaitoys.in">contactus@gogalgaitoys.in</a>. For any queries, click on the Contact us button on the top right side!</li>
+        <li class="title">Give us a call on <a href="tel:+919152110122">+919152110122</a> or mail us at <a href="mailto: contactus@gogalgaitoys.in">contactus@gogalgaitoys.in</a>. For any queries, click on the Contact us button on the top right side!</li>
     </div>
 </body>
 </html>
