--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
     <div class="productsstart">
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../img/9.2.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/9.2.JPG" alt="" ></a>
             </div>
             <div class="centerimg">
-                <img src="../img/10.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/10.JPG" alt="" ></a>
             </div>
             <div class="rightimg">
-                <img src="../img/11.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/11.JPG" alt="" ></a>
             </div>
         </div>
         <div class="descriptionprod">
@@ -133,13 +133,13 @@
         <!-- secondrow -->
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../img/giantwheel.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/giantwheel.JPG" alt="" ></a>
             </div>
             <div class="centerimg">
-                <img src="../img/kumkumdibbi.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/kumkumdibbi.JPG" alt="" ></a>
             </div>
             <div class="rightimg">
-                <img src="../img/indiapenstand.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/indiapenstand.JPG" alt="" ></a>
             </div>
         </div>
         <div class="descriptionprod">
@@ -156,13 +156,13 @@
         <!-- third row    -->
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../img/1.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/1.JPG" alt="" ></a>
             </div>
             <div class="centerimg">
-                <img src="../img/13.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/13.JPG" alt="" ></a>
             </div>
             <div class="rightimg">
-                <img src="../img/21.2.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/21.2.JPG" alt="" ></a>
             </div>
         </div>
         <div class="descriptionprod">
@@ -179,13 +179,13 @@
         <!-- fourth row -->
         <div class="rowproducts">
             <div class="leftimg">
-                <img src="../img/wind_top_1.jpg" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/wind_top_1.jpg" alt="" ></a>
             </div>
             <div class="centerimg">
-                <img src="../img/pencil_2sharp_3.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/pencil_2sharp_3.JPG" alt="" ></a>
             </div>
             <div class="rightimg">
-                <img src="../img/pushnpullsnail.JPG" alt="" >
+                <a href="https://linktr.ee/gogalgaitoys"><img src="../img/pushnpullsnail.JPG" alt="" ></a>
             </div>
         </div>
         <div class="descriptionprod">
